--- a/.github/workflows/ssis-deploy.yml
+++ b/.github/workflows/ssis-deploy.yml
@@ -42,7 +42,7 @@ jobs:
             Get-Content .\ssisdb_create.log | Write-Error
             exit 1
           }
-          Write-Host "SSIS Catalog creation/check completed."
+          Write-Host "SSIS Catalog creation/check completed. Using server: $env:DB_SERVER"
           Get-Content .\ssisdb_create.log | Write-Host
 
       - name: Deploy SSIS Project (.ispac)
@@ -71,20 +71,19 @@ jobs:
           }
 
           # Test SQL Server connectivity
-          Write-Host "Testing Integrated Authentication connectivity..."
+          Write-Host "Testing connectivity to $env:DB_SERVER..."
           try {
-            $sqlcmd = "sqlcmd -S `"$env:DB_SERVER`" -E -Q `"SELECT @@VERSION`" -o $connectLog"
+            $sqlcmd = "sqlcmd -S `"$env:DB_SERVER`" -U `"$env:DB_USER`" -P `"$env:DB_PASSWORD`" -Q `"SELECT @@SERVERNAME`" -o $connectLog"
             Invoke-Expression $sqlcmd
             if ($LASTEXITCODE -eq 0) {
-              Write-Host "Integrated Authentication connectivity test succeeded."
-              Get-Content $connectLog | Write-Host
+              Write-Host "Connectivity test succeeded. Server returned: $(Get-Content $connectLog)"
             } else {
-              Write-Warning "Integrated Authentication connectivity test failed."
-              Get-Content $connectLog | Write-Warning
+              Write-Error "Connectivity test failed. Check $connectLog"
+              Get-Content $connectLog | Write-Error
               exit 1
             }
           } catch {
-            Write-Error "Error testing Integrated Authentication: $_"
+            Write-Error "Error testing connectivity: $_"
             exit 1
           }
 
@@ -135,7 +134,7 @@ jobs:
           # Verify deployment
           Write-Host "Verifying deployment in catalog..."
           $verifySql = "SELECT * FROM SSISDB.catalog.projects WHERE folder_name = 'TimesheetDeployedPackages' AND name = 'ProjectPackages'"
-          $verifyCmd = "sqlcmd -S `"$env:DB_SERVER`" -E -Q `"$verifySql`" -o .\deployment_verify.log"
+          $verifyCmd = "sqlcmd -S `"$env:DB_SERVER`" -U `"$env:DB_USER`" -P `"$env:DB_PASSWORD`" -Q `"$verifySql`" -o .\deployment_verify.log"
           Invoke-Expression $verifyCmd
           if ($LASTEXITCODE -eq 0) {
             Write-Host "Deployment verification succeeded. Check deployment_verify.log"
@@ -171,11 +170,11 @@ jobs:
             $sqlFile = Join-Path $outdir "$name.sql"
             $content = (Get-Content -Raw $template) -replace '@jobName', $name -replace 'LAPTOP-ATT0UPK9', $env:DB_SERVER -replace '\$env:DB_USER', $env:DB_USER
             $content | Out-File -Encoding utf8 -NoNewline $sqlFile
-            Write-Host "Deploying job: $name"
+            Write-Host "Deploying job: $name with package: $pkg on server: $env:DB_SERVER"
             $cmd = "sqlcmd -S `"$env:DB_SERVER`" -U `"$env:DB_USER`" -P `"$env:DB_PASSWORD`" -i `"$sqlFile`" -o `"$outdir\$name.log`""
             Invoke-Expression $cmd
             if ($LASTEXITCODE -ne 0) {
-              Write-Error "Failed to deploy job: $name. Check $outdir\$name.log"
+              Write-Error "Failed to deploy job: $name. Check $outdir\$name.log for details"
               Get-Content "$outdir\$name.log" | Write-Error
               exit 1
             }
