--- a/.github/workflows/ssis-deploy.yml
+++ b/.github/workflows/ssis-deploy.yml
@@ -42,7 +42,7 @@ jobs:
             Get-Content .\ssisdb_create.log | Write-Error
             exit 1
           }
-          Write-Host "SSIS Catalog creation/check completed. Using server: $env:DB_SERVER"
+          Write-Host "SSIS Catalog creation/check completed."
           Get-Content .\ssisdb_create.log | Write-Host
 
       - name: Deploy SSIS Project (.ispac)
@@ -71,19 +71,20 @@ jobs:
           }
 
           # Test SQL Server connectivity
-          Write-Host "Testing connectivity to $env:DB_SERVER..."
+          Write-Host "Testing Integrated Authentication connectivity..."
           try {
-            $sqlcmd = "sqlcmd -S `"$env:DB_SERVER`" -U `"$env:DB_USER`" -P `"$env:DB_PASSWORD`" -Q `"SELECT @@SERVERNAME`" -o $connectLog"
+            $sqlcmd = "sqlcmd -S `"$env:DB_SERVER`" -E -Q `"SELECT @@VERSION`" -o $connectLog"
             Invoke-Expression $sqlcmd
             if ($LASTEXITCODE -eq 0) {
-              Write-Host "Connectivity test succeeded. Server returned: $(Get-Content $connectLog)"
+              Write-Host "Integrated Authentication connectivity test succeeded."
+              Get-Content $connectLog | Write-Host
             } else {
-              Write-Error "Connectivity test failed. Check $connectLog"
-              Get-Content $connectLog | Write-Error
+              Write-Warning "Integrated Authentication connectivity test failed."
+              Get-Content $connectLog | Write-Warning
               exit 1
             }
           } catch {
-            Write-Error "Error testing connectivity: $_"
+            Write-Error "Error testing Integrated Authentication: $_"
             exit 1
           }
 
@@ -134,7 +135,7 @@ jobs:
           # Verify deployment
           Write-Host "Verifying deployment in catalog..."
           $verifySql = "SELECT * FROM SSISDB.catalog.projects WHERE folder_name = 'TimesheetDeployedPackages' AND name = 'ProjectPackages'"
-          $verifyCmd = "sqlcmd -S `"$env:DB_SERVER`" -U `"$env:DB_USER`" -P `"$env:DB_PASSWORD`" -Q `"$verifySql`" -o .\deployment_verify.log"
+          $verifyCmd = "sqlcmd -S `"$env:DB_SERVER`" -E -Q `"$verifySql`" -o .\deployment_verify.log"
           Invoke-Expression $verifyCmd
           if ($LASTEXITCODE -eq 0) {
             Write-Host "Deployment verification succeeded. Check deployment_verify.log"
@@ -166,22 +167,4 @@ jobs:
           $packages = sqlcmd -S "$env:DB_SERVER" -U "$env:DB_USER" -P "$env:DB_PASSWORD" -Q "SELECT name FROM SSISDB.catalog.packages WHERE project_id IN (SELECT project_id FROM SSISDB.catalog.folders WHERE name = 'TimesheetDeployedPackages') AND name NOT IN ('TimesheetPa', 'TimesheetStaging1')" -h -1 -W
 
           foreach ($pkg in $packages.Trim().Split("`n") | Where-Object { $_ }) {
-            $name = $pkg.Trim() -replace '\.dtsx$', '' # Remove .dtsx from package name for job name
-            $sqlFile = Join-Path $outdir "$name.sql"
-            $content = (Get-Content -Raw $template) -replace '@jobName', $name -replace 'LAPTOP-ATT0UPK9', $env:DB_SERVER -replace '\$env:DB_USER', $env:DB_USER
-            $content | Out-File -Encoding utf8 -NoNewline $sqlFile
-            Write-Host "Deploying job: $name with package: $pkg on server: $env:DB_SERVER"
-            $cmd = "sqlcmd -S `"$env:DB_SERVER`" -U `"$env:DB_USER`" -P `"$env:DB_PASSWORD`" -i `"$sqlFile`" -o `"$outdir\$name.log`""
-            Invoke-Expression $cmd
-            if ($LASTEXITCODE -ne 0) {
-              Write-Error "Failed to deploy job: $name. Check $outdir\$name.log for details"
-              Get-Content "$outdir\$name.log" | Write-Error
-              exit 1
-            }
-          }
-
-          Write-Host "All SQL Server Agent jobs deployed."
-        env:
-          DB_SERVER: ${{ secrets.DB_SERVER }}
-          DB_USER: ${{ secrets.DB_USER }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+            $name =
